# kursova_Harchuk

./: .gitignore  AcademicSystem.h  CMakeLists.txt  ConversionRule.h  GradeConverter.h  Gradebook.h  Grades.cpp  IObservers.h  PriorityManager.cpp  ReportBuilder.cpp  ReportBuilder.h  SemesterManager.h  YearlyReport.h  assessments.cpp  assessments.h  averageCalcuation.cpp  averageCalculation.h  grades.h  imgui.ini  scales.csv  statisticManager.cpp  subject.cpp  subject.h
.github/workflows/: c-cpp.yml
UI/: UI.cpp  UI.h  app_state.h  dashboard_parts.cpp  dashboard_parts.h  dashboard_parts_internal.h  dashboard_semester_overview.cpp  dashboard_subject_details.cpp  dashboard_subjects_list.cpp  dashboard_top_panel.cpp  grade_entry.cpp  grade_entry.h  subject_modals.cpp  subject_modals.h
data/: scales.csv
src/: UML_src_logic.md  main.cpp
src/core/: AcademicPorts.h  AcademicSystem.h  AnualReportBuilder.h  AssessmentPerformanceService.h  GradePolicy.h  Gradebook.h  IObservers.h  PriorityManager.cpp  PriorityManager.h  ReportBuilder.h  SemesterManager.cpp  SemesterManager.h  SubjectGroupPerformanceService.h  SubjectPerformance.h  YearlyReport.h  YearlyReportSaver.h  assessments.cpp  assessments.h  averageCalcuation.cpp  averageCalculation.h  statisticManager.h  subject.cpp  subject.h
src/io/: ConversionRule.h  DataManager.cpp  DataManager.h  GradeConverter.h
tests/: test_assessments.cpp  test_buisnes_logic.cpp  test_edge_cases.cpp  test_general_errors.cpp  test_key_scenarios.cpp  test_priority_manager.cpp  test_save_creation_mocks.cpp  test_strategies.cpp  test_subject.cpp
